runtime/pipeline/nodes/tests/snapshots/oscillator__node_grapher__long_sine_oscillator.snap
---
source: runtime/pipeline/nodes/tests/node_grapher.rs
expression: values

---
[
    0.00004249421351637528,
    0.00016996963103288465,
    0.00038240458467903027,
    0.0006797629654296533,
    0.0010619942292427464,
    0.0015290334056504706,
    0.0020808011088029876,
    0.002717203550961944,
    0.0034381325584422195,
    0.0042434655899991625,
    0.0051330657576575955,
    0.006106781849979592,
    0.007164448357767139,
    0.008305885502194466,
    0.009530899265366766,
    0.01083928142329832,
    0.012230809581305957,
    0.013705247211811156,
    0.015262343694543878,
    0.01690183435914261,
    0.018623440530141755,
    0.02042686957434059,
    0.022311814950543518,
    0.024277956261665512,
    0.026324959309191764,
    0.028452476149984085,
    0.03066014515542287,
    0.032947591072875704,
    0.035314425089481793,
    0.03776024489824081,
    0.040284634766396044,
    0.0428871656060994,
    0.04556739504734597,
    0.04832486751316728,
    0.051159114297068375,
    0.05406965364269728,
    0.05705599082573237,
    0.060117618237974124,
    0.06325401547362669,
    0.06646464941775482,
    0.06974897433690114,
    0.07310643197184818,
    0.07653645163250955,
    0.08003845029493384,
    0.08361183270040551,
    0.08725599145662494,
    0.090970307140951,
    0.09475414840568863,
    0.09860687208540347,
    0.10252782330624471,
    0.10651633559725904,
    0.11057173100367473,
    0.11469332020213863,
    0.11888040261788507,
    0.1231322665438172,
    0.1274481892614811,
    0.13182743716391082,
    0.13626926588032467,
    0.14077292040265083,
    0.14533763521386273,
    0.14996263441809615,
    0.15464713187253665,
    0.15939033132104363,
    0.16419142652949764,
    0.16904960142283776,
    0.1739640302237801,
    0.1789338775931773,
    0.1839582987720082,
    0.18903643972496742,
    0.19416743728563118,
    0.19935041930317599,
    0.2045845047906238,
    0.20986880407458952,
    0.21520241894650494,
    0.22058444281529332,
    0.22601396086146897,
    0.2314900501926353,
    0.23701178000035517,
    0.2425782117183669,
    0.2481883991821187,
    0.2538413887895947,
    0.25953621966340545,
    0.2652719238141146,
    0.27104752630477463,
    0.27686204541664394,
    0.28271449281605593,
    0.28860387372241314,
    0.2945291870772766,
    0.3004894257145231,
    0.3064835765315389,
    0.3125106206614268,
    0.31856953364618457,
    0.32465928561084567,
    0.33077884143852737,
    0.33692716094638353,
    0.3431031990624048,
    0.34930590600306316,
    0.35553422745174457,
    0.3617871047379643,
    0.368063475017312,
    0.37436227145211265,
    0.38068242339276376,
    0.3870228565597213,
    0.39338249322610214,
    0.39976025240087276,
    0.40615505001259256,
    0.4125657990936812,
    0.4189914099651776,
    0.42543079042196047,
    0.43188284591839754,
    0.4383464797543933,
    0.44482059326180245,
    0.4513040859911782,
    0.45779585589882305,
    0.46429479953411074,
    0.47079981222704737,
    0.47730978827603976,
    0.4838236211358391,
    0.49034020360562797,
    0.4968584280172188,
    0.5033771864233317,
    0.5098953707859216,
    0.5164118731645146,
    0.5229255859045387,
    0.5294354018255923,
    0.5359402144096463,
    0.5424389179891196,
    0.5489304079348236,
    0.5554135808437187,
    0.5618873347264695,
    0.5683505691947569,
    0.574802185648319,
    0.5812410874616873,
    0.5876661801705881,
    0.5940763716579757,
    0.6004705723396667,
    0.6068476953495454,
    0.6132066567243043,
    0.619546375587694,
    0.6258657743342464,
    0.6321637788124428,
    0.6384393185072953,
    0.644691326722309,
    0.6509187407607958,
    0.6571205021065085,
    0.663295556603564,
    0.6694428546356251,
    0.6755613513043114,
    0.6816500066068074,
    0.6877077856126393,
    0.6937336586395894,
    0.6997266014287167,
    0.7056855953184608,
    0.7116096274177852,
    0.717497690778352,
    0.723348784565673,
    0.7291619142292348,
    0.7349360916715436,
    0.7406703354160843,
    0.7463636707741433,
    0.7520151300104889,
    0.7576237525078575,
    0.7631885849302427,
    0.7687086813849354,
    0.7741831035833062,
    0.779610921000292,
    0.7849912110325639,
    0.7903230591553478,
    0.7956055590778741,
    0.8008378128974238,
    0.8060189312519533,
    0.8111480334712642,
    0.8162242477266968,
    0.8212467111793216,
    0.8262145701266012,
    0.8311269801475003,
    0.8359831062460177,
    0.8407821229931162,
    0.8455232146670262,
    0.8502055753919011,
    0.854828409274794,
    0.859390930540946,
    0.8638923636673441,
    0.8683319435145482,
    0.8727089154567413,
    0.8770225355100034,
    0.8812720704587672,
    0.8854567979804518,
    0.889576006768237,
    0.8936289966519728,
    0.897615078717188,
    0.9015335754221945,
    0.9053838207132485,
    0.9091651601377688,
    0.9128769509555756,
    0.9165185622481427,
    0.920089375025839,
    0.9235887823331421,
    0.9270161893518065,
    0.93037101350197,
    0.9336526845411774,
    0.9368606446613092,
    0.9399943485833966,
    0.9430532636503051,
    0.9460368699172748,
    0.9489446602402987,
    0.9517761403623253,
    0.954530828997271,
    0.9572082579118284,
    0.9598079720050527,
    0.9623295293857217,
    0.9647725014474438,
    0.9671364729415137,
    0.9694210420474936,
    0.9716258204415144,
    0.9737504333622801,
    0.9757945196747708,
    0.9777577319316254,
    0.9796397364322009,
    0.9814402132792928,
    0.9831588564335108,
    0.9847953737652981,
    0.9863494871045873,
    0.987820932288082,
    0.9892094592041591,
    0.9905148318353816,
    0.9917368282986161,
    0.9928752408827481,
    0.9939298760839883,
    0.9949005546387626,
    0.995787111554184,
    0.9965893961360972,
    0.9973072720146927,
    0.9979406171676873,
    0.9984893239410644,
    0.9989532990673724,
    0.9993324636815795,
    0.9996267533344771,
    0.9998361180036359,
    0.999960522101908,
    0.9999999444834763,
    0.9999543784474483,
    0.9998238317389954,
    0.9996083265480366,
    0.9993078995054661,
    0.9989226016769275,
    0.9984524985541336,
    0.9978976700437344,
    0.9972582104537346,
    0.9965342284774634,
    0.9957258471750999,
    0.9948332039527545,
    0.9938564505391139,
    0.9927957529596508,
    0.9916512915084026,
    0.9904232607173264,
    0.9891118693232333,
    0.9877173402323061,
    0.9862399104822128,
    0.9846798312018148,
    0.9830373675684803,
    0.98131279876301,
    0.9795064179221848,
    0.9776185320889366,
    0.9756494621601605,
    0.9735995428321684,
    0.971469122543799,
    0.9692585634171903,
    0.9669682411962289,
    0.9645985451826801,
    0.9621498781700176,
    0.959622656374957,
    0.9570173093667089,
    0.9543342799939607,
    0.9515740243096049,
    0.9487370114932197,
    0.9458237237713176,
    0.9428346563353811,
    0.9397703172576898,
    0.9366312274049593,
    0.9334179203498075,
    0.9301309422800595,
    0.9267708519059061,
    0.9233382203649387,
    0.919833631125068,
    0.9162576798853481,
    0.9126109744747203,
    0.9088941347486987,
    0.9051077924840062,
    0.9012525912711897,
    0.8973291864052233,
    0.8933382447741239,
    0.8892804447455935,
    0.8851564760517165,
    0.8809670396717166,
    0.8767128477128108,
    0.8723946232891646,
    0.8680131003989813,
    0.8635690237997367,
    0.8590631488815907,
    0.8544962415389878,
    0.8498690780404693,
    0.8451824448967307,
    0.8404371387269303,
    0.8356339661232814,
    0.8307737435139535,
    0.8258572970242961,
    0.8208854623364156,
    0.8158590845471316,
    0.8107790180243284,
    0.8056461262617325,
    0.8004612817321364,
    0.7952253657391039,
    0.7899392682671618,
    0.7846038878305297,
    0.7792201313203893,
    0.7737889138507359,
    0.7683111586028273,
    0.7627877966682696,
    0.7572197668907465,
    0.751608015706444,
    0.7459534969831739,
    0.7402571718582402,
    0.734520008575068,
    0.728742982318623,
    0.7229270750496529,
    0.71707327533778,
    0.7111825781934633,
    0.7052559848988718,
    0.6992945028376899,
    0.693299145323883,
    0.6872709314294597,
    0.681210885811254,
    0.6751200385367557,
    0.6689994249090231,
    0.6628500852907063,
    0.6566730649272067,
    0.6504694137690148,
    0.6442401862932364,
    0.6379864413243621,
    0.6317092418542878,
    0.6254096548616326,
    0.6190887511303736,
    0.6127476050678439,
    0.6063872945221003,
    0.6000089005987214,
    0.5936135074770401,
    0.5872022022258598,
    0.5807760746186784,
    0.5743362169484496,
    0.5678837238419199,
    0.5614196920735692,
    0.5549452203791823,
    0.5484614092690894,
    0.541969360841106,
    0.5354701785931999,
    0.5289649672359225,
    0.5224548325046361,
    0.5159408809715621,
    0.5094242198576895,
    0.5029059568445743,
    0.4963871998860558,
    0.4898690570199358,
    0.4833526361796315,
    0.47683904500585783,
    0.4703293906583512,
    0.4638247796276796,
    0.45732631754716113,
    0.4508351090049383,
    0.4443522573562163,
    0.43787886453572483,
    0.4314160308704105,
    0.4249648548924082,
    0.4185264331523165,
    0.41210186003280713,
    0.4056922275626067,
    0.3992986252308791,
    0.39292213980203483,
    0.3865638551310071,
    0.38022485197902245,
    0.3739062078298936,
    0.36760899670687414,
    0.36133428899010106,
    0.35508315123465223,
    0.34885664598925764,
    0.3426558316156916,
    0.33648176210887215,
    0.33033548691771275,
    0.3242180507667327,
    0.31813049347848493,
    0.31207384979680614,
    0.3060491492109364,
    0.30005741578052625,
    0.2940996679615763,
    0.28817691843331655,
    0.28229017392607997,
    0.27644043505017857,
    0.2706286961258237,
    0.264855945014115,
    0.2591231629491251,
    0.2534313243711136,
    0.24778139676089656,
    0.242174340475395,
    0.23661110858439682,
    0.231092646708558,
    0.22561989285866685,
    0.22019377727620493,
    0.21481522227522964,
    0.20948514208559943,
    0.20420444269757682,
    0.1989740217078318,
    0.1937947681668682,
    0.18866756242791066,
    0.18359327599725955,
    0.17857277138615968,
    0.1736069019641906,
    0.16869651181421502,
    0.1638424355889016,
    0.15904549836885779,
    0.15430651552238006,
    0.14962629256686488,
    0.14500562503188646,
    0.14044529832397618,
    0.13594608759312182,
    0.13150875760100872,
    0.12713406259102872,
    0.12282274616007771,
    0.11857554113215951,
    0.11439316943382338,
    0.1102763419714537,
    0.10622575851043059,
    0.10224210755618746,
    0.09832606623718165,
    0.09447830018979708,
    0.09069946344520152,
    0.0869901983181775,
    0.08335113529794108,
    0.07978289294097723,
    0.07628607776589535,
    0.0728612841503386,
    0.06950909422995166,
    0.0662300777994318,
    0.06302479221567542,
    0.05989378230304332,
    0.0568375802607497,
    0.05385670557240341,
    0.05095166491770642,
    0.04812295208633016,
    0.04537104789398311,
    0.04269642010068214,
    0.04009952333124506,
    0.03758079899801542,
    0.03514067522583164,
    0.03277956677925603,
    0.03049787499207479,
    0.02829598769907954,
    0.02617427917014503,
    0.024133110046612505,
    0.022172827279988316,
    0.020293764072970122,
    0.018496239822810734,
    0.016780560067026773,
    0.01514701643146621,
    0.013595886580736738,
    0.012127434171010809,
    0.010741908805209477,
    0.009439545990575782,
    0.008220567098643383,
    0.007085179327609936,
    0.006033575667116542,
    0.005065934865445265,
    0.004182421399135494,
    0.003383185445026804,
    0.0026683628547322646,
    0.0020380751315470236,
    0.0014924294097953261,
    0.0010315184366204155,
    0.0006554205562195325,
    0.0003641996965272898,
    0.0001579053583491974,
]
