runtime/pipeline/nodes/tests/snapshots/oscillator__node_grapher__saw_oscillator.snap
---
source: runtime/pipeline/nodes/tests/node_grapher.rs
assertion_line: 109
expression: values

---
[
    0.0166,
    0.0332,
    0.0498,
    0.0664,
    0.083,
    0.09960000000000001,
    0.11620000000000001,
    0.1328,
    0.1494,
    0.166,
    0.1826,
    0.19920000000000002,
    0.21580000000000002,
    0.23240000000000002,
    0.24900000000000003,
    0.2656,
    0.2822,
    0.2988,
    0.3154,
    0.332,
    0.3486,
    0.3652,
    0.38180000000000003,
    0.39840000000000003,
    0.41500000000000004,
    0.43160000000000004,
    0.44820000000000004,
    0.46480000000000005,
    0.48140000000000005,
    0.49800000000000005,
    0.5146000000000001,
    0.5312,
    0.5478,
    0.5643999999999999,
    0.5809999999999998,
    0.5975999999999998,
    0.6141999999999997,
    0.6307999999999997,
    0.6473999999999996,
    0.6639999999999996,
    0.6805999999999995,
    0.6971999999999995,
    0.7137999999999994,
    0.7303999999999994,
    0.7469999999999993,
    0.7635999999999993,
    0.7801999999999992,
    0.7967999999999992,
    0.8133999999999991,
    0.8299999999999991,
    0.846599999999999,
    0.863199999999999,
    0.8797999999999989,
    0.8963999999999989,
    0.9129999999999988,
    0.9295999999999988,
    0.9461999999999987,
    0.9627999999999987,
    0.9793999999999986,
    0.9959999999999986,
    0.012599999999998612,
    0.02919999999999856,
    0.04579999999999851,
    0.06239999999999846,
    0.0789999999999984,
    0.09559999999999835,
    0.1121999999999983,
    0.12879999999999825,
    0.1453999999999982,
    0.16199999999999815,
    0.1785999999999981,
    0.19519999999999804,
    0.211799999999998,
    0.22839999999999794,
    0.2449999999999979,
    0.26159999999999783,
    0.2781999999999978,
    0.29479999999999773,
    0.3113999999999977,
    0.3279999999999976,
    0.3445999999999976,
    0.3611999999999975,
    0.37779999999999747,
    0.3943999999999974,
    0.41099999999999737,
    0.4275999999999973,
    0.44419999999999726,
    0.4607999999999972,
    0.47739999999999716,
    0.4939999999999971,
    0.5105999999999971,
    0.527199999999997,
    0.543799999999997,
    0.5603999999999969,
    0.5769999999999968,
    0.5935999999999968,
    0.6101999999999967,
    0.6267999999999967,
    0.6433999999999966,
    0.6599999999999966,
    0.6765999999999965,
    0.6931999999999965,
    0.7097999999999964,
    0.7263999999999964,
    0.7429999999999963,
    0.7595999999999963,
    0.7761999999999962,
    0.7927999999999962,
    0.8093999999999961,
    0.8259999999999961,
    0.842599999999996,
    0.859199999999996,
    0.8757999999999959,
    0.8923999999999959,
    0.9089999999999958,
    0.9255999999999958,
    0.9421999999999957,
    0.9587999999999957,
    0.9753999999999956,
    0.9919999999999956,
    0.0085999999999955,
    0.025199999999995448,
    0.041799999999995396,
    0.058399999999995345,
    0.07499999999999529,
    0.09159999999999524,
    0.10819999999999519,
    0.12479999999999514,
    0.14139999999999509,
    0.15799999999999503,
    0.17459999999999498,
    0.19119999999999493,
    0.20779999999999488,
    0.22439999999999483,
    0.24099999999999477,
    0.2575999999999947,
    0.27419999999999467,
    0.2907999999999946,
    0.30739999999999457,
    0.3239999999999945,
    0.34059999999999446,
    0.3571999999999944,
    0.37379999999999436,
    0.3903999999999943,
    0.40699999999999426,
    0.4235999999999942,
    0.44019999999999415,
    0.4567999999999941,
    0.47339999999999405,
    0.489999999999994,
    0.5065999999999939,
    0.5231999999999939,
    0.5397999999999938,
    0.5563999999999938,
    0.5729999999999937,
    0.5895999999999937,
    0.6061999999999936,
    0.6227999999999936,
    0.6393999999999935,
    0.6559999999999935,
    0.6725999999999934,
    0.6891999999999934,
    0.7057999999999933,
    0.7223999999999933,
    0.7389999999999932,
    0.7555999999999932,
    0.7721999999999931,
    0.7887999999999931,
    0.805399999999993,
    0.821999999999993,
    0.8385999999999929,
    0.8551999999999929,
    0.8717999999999928,
    0.8883999999999928,
    0.9049999999999927,
    0.9215999999999926,
    0.9381999999999926,
    0.9547999999999925,
    0.9713999999999925,
    0.9879999999999924,
    0.004599999999992388,
    0.021199999999992336,
    0.037799999999992284,
    0.05439999999999223,
    0.07099999999999218,
    0.08759999999999213,
    0.10419999999999208,
    0.12079999999999202,
    0.13739999999999197,
    0.15399999999999192,
    0.17059999999999187,
    0.18719999999999182,
    0.20379999999999177,
    0.2203999999999917,
    0.23699999999999166,
    0.2535999999999916,
    0.27019999999999156,
    0.2867999999999915,
    0.30339999999999145,
    0.3199999999999914,
    0.33659999999999135,
    0.3531999999999913,
    0.36979999999999125,
    0.3863999999999912,
    0.40299999999999114,
    0.4195999999999911,
    0.43619999999999104,
    0.452799999999991,
    0.46939999999999094,
    0.4859999999999909,
    0.5025999999999908,
    0.5191999999999908,
    0.5357999999999907,
    0.5523999999999907,
    0.5689999999999906,
    0.5855999999999906,
    0.6021999999999905,
    0.6187999999999905,
    0.6353999999999904,
    0.6519999999999904,
    0.6685999999999903,
    0.6851999999999903,
    0.7017999999999902,
    0.7183999999999902,
    0.7349999999999901,
    0.75159999999999,
    0.76819999999999,
    0.78479999999999,
    0.8013999999999899,
    0.8179999999999898,
    0.8345999999999898,
    0.8511999999999897,
    0.8677999999999897,
    0.8843999999999896,
    0.9009999999999896,
    0.9175999999999895,
    0.9341999999999895,
    0.9507999999999894,
    0.9673999999999894,
    0.9839999999999893,
]
