runtime/pipeline/nodes/tests/snapshots/oscillator__node_grapher__triangle_oscillator.snap
---
source: runtime/pipeline/nodes/tests/node_grapher.rs
expression: values

---
[
    0.0166,
    0.0332,
    0.0498,
    0.0664,
    0.083,
    0.09960000000000001,
    0.11620000000000001,
    0.1328,
    0.1494,
    0.166,
    0.1826,
    0.19920000000000002,
    0.21580000000000002,
    0.23240000000000002,
    0.24900000000000003,
    0.2656,
    0.2822,
    0.2988,
    0.3154,
    0.332,
    0.3486,
    0.3652,
    0.38180000000000003,
    0.39840000000000003,
    0.41500000000000004,
    0.43160000000000004,
    0.44820000000000004,
    0.46480000000000005,
    0.48140000000000005,
    0.49800000000000005,
    0.9853999999999999,
    0.9688,
    0.9522,
    0.9356000000000001,
    0.9190000000000002,
    0.9024000000000002,
    0.8858000000000003,
    0.8692000000000003,
    0.8526000000000004,
    0.8360000000000004,
    0.8194000000000005,
    0.8028000000000005,
    0.7862000000000006,
    0.7696000000000006,
    0.7530000000000007,
    0.7364000000000007,
    0.7198000000000008,
    0.7032000000000008,
    0.6866000000000009,
    0.6700000000000009,
    0.653400000000001,
    0.636800000000001,
    0.6202000000000011,
    0.6036000000000011,
    0.5870000000000012,
    0.5704000000000012,
    0.5538000000000013,
    0.5372000000000013,
    0.5206000000000014,
    0.5040000000000014,
    0.012599999999998612,
    0.02919999999999856,
    0.04579999999999851,
    0.06239999999999846,
    0.0789999999999984,
    0.09559999999999835,
    0.1121999999999983,
    0.12879999999999825,
    0.1453999999999982,
    0.16199999999999815,
    0.1785999999999981,
    0.19519999999999804,
    0.211799999999998,
    0.22839999999999794,
    0.2449999999999979,
    0.26159999999999783,
    0.2781999999999978,
    0.29479999999999773,
    0.3113999999999977,
    0.3279999999999976,
    0.3445999999999976,
    0.3611999999999975,
    0.37779999999999747,
    0.3943999999999974,
    0.41099999999999737,
    0.4275999999999973,
    0.44419999999999726,
    0.4607999999999972,
    0.47739999999999716,
    0.4939999999999971,
    0.9894000000000029,
    0.972800000000003,
    0.956200000000003,
    0.9396000000000031,
    0.9230000000000032,
    0.9064000000000032,
    0.8898000000000033,
    0.8732000000000033,
    0.8566000000000034,
    0.8400000000000034,
    0.8234000000000035,
    0.8068000000000035,
    0.7902000000000036,
    0.7736000000000036,
    0.7570000000000037,
    0.7404000000000037,
    0.7238000000000038,
    0.7072000000000038,
    0.6906000000000039,
    0.6740000000000039,
    0.657400000000004,
    0.640800000000004,
    0.6242000000000041,
    0.6076000000000041,
    0.5910000000000042,
    0.5744000000000042,
    0.5578000000000043,
    0.5412000000000043,
    0.5246000000000044,
    0.5080000000000044,
    0.0085999999999955,
    0.025199999999995448,
    0.041799999999995396,
    0.058399999999995345,
    0.07499999999999529,
    0.09159999999999524,
    0.10819999999999519,
    0.12479999999999514,
    0.14139999999999509,
    0.15799999999999503,
    0.17459999999999498,
    0.19119999999999493,
    0.20779999999999488,
    0.22439999999999483,
    0.24099999999999477,
    0.2575999999999947,
    0.27419999999999467,
    0.2907999999999946,
    0.30739999999999457,
    0.3239999999999945,
    0.34059999999999446,
    0.3571999999999944,
    0.37379999999999436,
    0.3903999999999943,
    0.40699999999999426,
    0.4235999999999942,
    0.44019999999999415,
    0.4567999999999941,
    0.47339999999999405,
    0.489999999999994,
    0.9934000000000061,
    0.9768000000000061,
    0.9602000000000062,
    0.9436000000000062,
    0.9270000000000063,
    0.9104000000000063,
    0.8938000000000064,
    0.8772000000000064,
    0.8606000000000065,
    0.8440000000000065,
    0.8274000000000066,
    0.8108000000000066,
    0.7942000000000067,
    0.7776000000000067,
    0.7610000000000068,
    0.7444000000000068,
    0.7278000000000069,
    0.7112000000000069,
    0.694600000000007,
    0.678000000000007,
    0.6614000000000071,
    0.6448000000000071,
    0.6282000000000072,
    0.6116000000000072,
    0.5950000000000073,
    0.5784000000000074,
    0.5618000000000074,
    0.5452000000000075,
    0.5286000000000075,
    0.5120000000000076,
    0.004599999999992388,
    0.021199999999992336,
    0.037799999999992284,
    0.05439999999999223,
    0.07099999999999218,
    0.08759999999999213,
    0.10419999999999208,
    0.12079999999999202,
    0.13739999999999197,
    0.15399999999999192,
    0.17059999999999187,
    0.18719999999999182,
    0.20379999999999177,
    0.2203999999999917,
    0.23699999999999166,
    0.2535999999999916,
    0.27019999999999156,
    0.2867999999999915,
    0.30339999999999145,
    0.3199999999999914,
    0.33659999999999135,
    0.3531999999999913,
    0.36979999999999125,
    0.3863999999999912,
    0.40299999999999114,
    0.4195999999999911,
    0.43619999999999104,
    0.452799999999991,
    0.46939999999999094,
    0.4859999999999909,
    0.9974000000000092,
    0.9808000000000092,
    0.9642000000000093,
    0.9476000000000093,
    0.9310000000000094,
    0.9144000000000094,
    0.8978000000000095,
    0.8812000000000095,
    0.8646000000000096,
    0.8480000000000096,
    0.8314000000000097,
    0.8148000000000097,
    0.7982000000000098,
    0.7816000000000098,
    0.7650000000000099,
    0.74840000000001,
    0.73180000000001,
    0.71520000000001,
    0.6986000000000101,
    0.6820000000000102,
    0.6654000000000102,
    0.6488000000000103,
    0.6322000000000103,
    0.6156000000000104,
    0.5990000000000104,
    0.5824000000000105,
    0.5658000000000105,
    0.5492000000000106,
    0.5326000000000106,
    0.5160000000000107,
]
